fix: remove extra width on mobile

--- a/client/src/client-only-routes/show-settings.css
+++ b/client/src/client-only-routes/show-settings.css
@@ -49,7 +49,7 @@
     display: none;
   }
 
-  .settings-container > .container {
-    width: 100%;
+  .settings-container {
+    display: block;
   }
 }
